@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListCourseExamsUI <<presentation>> {
    doShow()
}
class ListCourseExamsController <<application>> {
    listCourseExams()
}

class AuthorizationService <<service>> {
    ensureAuthenticatedUserHasAnyOf(Role...)
    session()
}

class UserSession {
    authenticatedUser()
}

class ExamManagementService <<service>> {
    listAllCourseExams = findAllExamsByCourse()
}

class PersistenceContext <<persistence>> {
    repositories()
}

class RepositoryFactory <<factory>> {
    courses()
}

class ExamRepository <<repository>> {
    allCourseExams
}

ListCourseExamsUI --> ListCourseExamsController : the controller
ListCourseExamsController --> AuthorizationService : autzh
ListCourseExamsController --> ExamManagementService : service
ListCourseExamsController --> PersistenceContext : persistence
AuthorizationService --> UserSession : session
ExamManagementService --> PersistenceContext : persistence
ExamManagementService --> ExamRepository : repo
PersistenceContext --> RepositoryFactory : factory
RepositoryFactory --> ExamRepository : repo


@enduml